# auto-academic-sildes

./: .gitignore  README.md  README_zh.md  ROADMAP.md  pyproject.toml
docs/: AGENT_WORKFLOW.md  DESIGN_CONTEXT_PROTOCOL.md  DESIGN_REFERENCE_SYNTHESIS.md  HTML_FIRST_ARCHITECTURE.md  IMAGE_EVIDENCE.md  IR.md  PROJECT_FLOW.md  PUBLICATION_POLICY.md  PUBLIC_PROFILE_WORKFLOW.md  SURVEY_DECISIONS.md  VISUAL_GRAMMARS.md  VISUAL_QA.md
docs/anonymous_case_gallery/: README.md
examples/anonymous-cases/: README.md
examples/paper-talk/: deck.yaml
examples/starter/: deck.yaml
examples/tech-review/: deck.yaml
schema/: deck.schema.json
scripts/: prepare_evidence_assets.py  sync_agent_skill_bridges.py
src/academic_deck_compiler/: __init__.py  assets.py  cli.py  content.py  design_directions.py  evidence_audit.py  html_export.py  ir.py  ir_types.py  judge.py  package.py  paths.py  patterns.py  preview.py  quality.py  render_beamer.py  render_html.py  render_pptx.py  source_manifest.py  style.py
templates/academic-homepage-grid/: DESIGN.md
templates/academic-minimal/: DESIGN.md
templates/atlas-marginalia/: DESIGN.md
templates/broadsheet-data-room/: DESIGN.md
templates/broadside-lab/: DESIGN.md
templates/catalog-atelier/: DESIGN.md
templates/chromatic-research-map/: DESIGN.md
templates/cobalt-research-grid/: DESIGN.md
templates/couture-exhibition/: DESIGN.md
templates/dark-lab-notebook/: DESIGN.md
templates/dense-systems/: DESIGN.md
templates/editorial-profile/: DESIGN.md
tests/: test_agent_skill_bridges.py  test_core.py
(+79 files in other folders)
